# gGoods

./: .all-contributorsrc  .env.example  .gitignore  README.md  docker-compose.yaml  makefile  package.json
.github/workflows/: publish-release.yaml  push-dev-environment.yaml  push-main-environment.yaml  push-master-environment.yaml
contracts/: chgname.sh
contracts/dgoods/: dgoods.abi  dgoods.wasm
contracts/ggoodsggoods/: CMakeLists.txt  Makefile  README.md  example_usage.md  ggoodsggoods.pwd
contracts/ggoodsggoods/src/: CMakeLists.txt  ggoodsggoods.cpp
contracts/tests/: README.md  package.json  test.js
docs/: create-a-release.md
docs/img/: diagrams.xml
hapi/: Dockerfile  makefile  package.json
hapi/.yarn/: build-state.yml
hapi/src/: index.js
hasura/: Dockerfile  makefile
hasura/metadata/: actions.graphql  actions.yaml  tables.yaml
hasura/seeds/: 1615472583821_vault_seed.sql
kubernetes/: ggoods-configmap.yaml  hapi-deployment.yaml  hapi-service.yaml  hasura-deployment.yaml  hasura-service.yaml  ingress.yaml  postgres-deployment.yaml  postgres-service.yaml  postgres-statefulset.yaml  resource-watcher.yaml  storageclass.yaml  wallet-deployment.yaml  wallet-service.yaml  wallet-statefulset.yaml  webapp-deployment.yaml  webapp-service.yaml
kubernetes/qa/: webapp-deployment.yaml  webapp-service.yaml
utils/: meta.mk
wallet/: makefile
wallet/seeds/: ggacccreator.wallet  ggoodsggoods.wallet
webapp/: .eslintcache  .eslintrc  .prettierrc  Dockerfile  makefile  package.json
webapp/public/: index.html  manifest.webmanifest  site.webmanifest
(+238 files in other folders)
